v410-security-and-permission-from-gongbo

--- a/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/4.sort-query-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/4.sort-query-of-oracle-mode.md
@@ -81,7 +81,7 @@ obclient> SELECT empname, deptno,sal, HIREDATE FROM emp WHERE sal>=1000 ORDER BY
 
 You can use the `NLSSORT` function to sort by Chinese Pinyin or stroke number. 
 
-For more information about the `NLSSORT` function, see [NLSSORT](../../6.sql-syntax/3.common-tenant-oracle-mode/5.functions-2/2.single-row-functions/2.string-functions-that-return-a-string/8.NLSSORT.md). 
+For more information about the `NLSSORT` function, see [NLSSORT](../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/2.single-row-functions-of-oracle-mode/2.string-functions-that-return-a-string-of-oracle-mode/8.nlssort-of-oracle-mode.md). 
 
 ### Examples
 
