--- a/en-US/6.manage/2.tenant-management/2.tenant-capacity.md
+++ b/en-US/6.manage/2.tenant-management/2.tenant-capacity.md
@@ -1,6 +1,6 @@
 # Tenant capacity
 
-Tenant capacity refers to the service capabilities of the tenant, including the computing and storage capabilities.
+Tenant capacity refers to the service capabilities of a tenant, including the computing and storage capabilities.
 
 OceanBase Database allows you to dynamically adjust the capacity of a tenant. You can modify the service capabilities of a single node for vertical scaling or modify the number of service nodes for horizontal scaling. This is also one of the architectural benefits of OceanBase Database against conventional databases. The horizontal scalability can easily break the limit on the capacity of a single server.
 
