--- a/en-US/6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/1.resource-isolation-overview.md
+++ b/en-US/6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/1.resource-isolation-overview.md
@@ -16,8 +16,8 @@ In OceanBase Database, the procedural language (PL) package `DBMS_RESOURCE_MANAG
 
 * Plan directives: A plan directive associates a resource group with a resource management plan and specifies how resources are allocated to this resource group.
 
-For more information about the `DBMS_RESOURCE_MANAGER` package, see [DBMS_RESOURCE_MANAGER (Oracle mode)](../../../4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/133.dbms-resource-manager-oracle/1.dbms-resource-manager-overview-oracle.md)
-and [DBMS_RESOURCE_MANAGER (MySQL mode)](../../../4.development-reference/3.pl-reference/2.pl-mysql/10.pl-system-package-mysql/133.dbms-resource-manager-mysql/1.dbms-resource-manager-overview-mysql.md).
+<!-- For more information about the `DBMS_RESOURCE_MANAGER` package, see [DBMS_RESOURCE_MANAGER (Oracle mode)](../../../4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/133.dbms-resource-manager-oracle/1.dbms-resource-manager-overview-oracle.md)
+and [DBMS_RESOURCE_MANAGER (MySQL mode)](../../../4.development-reference/3.pl-reference/2.pl-mysql/10.pl-system-package-mysql/133.dbms-resource-manager-mysql/1.dbms-resource-manager-overview-mysql.md). -->
 
 ## Resource isolation types
 
