--- a/en-US/6.manage/5.security-and-permissions/2.identification-and-authentication/2.identification-and-authentication-of-oracle-mode/2.password-complexity-of-oracle-mode.md
+++ b/en-US/6.manage/5.security-and-permissions/2.identification-and-authentication/2.identification-and-authentication-of-oracle-mode/2.password-complexity-of-oracle-mode.md
@@ -1,10 +1,10 @@
 # Password complexity
 
-Password complexity strategies of OceanBase Database in Oracle mode are compatible with those in Oracle databases. To prevent brute-force attacks against passwords and improve database security, OceanBase Database allows you to configure password complexity functions to verify user identities in logons. 
+OceanBase Database has a password complexity policy for Oracle mode, which is compatible with Oracle database's password policy. OceanBase Database allows you to set password complexity in Oracle mode, in order to verify the identity of login users, prevent malicious password attacks, thereby improving database security. 
 
 <main id="notice" >
     <h4>Applicability</h4>
-    <p>This topic applies only to OceanBase Database in Oracle mode. OceanBase Database Community Edition supports only the MySQL mode. For more information about password complexity in MySQL mode, see <a href="../1.identification-and-authentication-of-mysql-mode/2.password-complexity-of-mysql-mode.md">Password complexity</a>. </p>
+    <p>This topic applies only to OceanBase Database in Oracle mode. OceanBase Database Community Edition only supports MySQL mode. For password complexity in MySQL mode, see <a href="../1.identification-and-authentication-of-mysql-mode/2.password-complexity-of-mysql-mode.md">Password complexity</a>. </p>
 </main>
 
 ## Prerequisites
@@ -18,39 +18,39 @@ FUNCTION verify_function (username     IN VARCHAR2,
 RETURN BOOLEAN;
 ```
 
-When you create a user or when a user changes the logon password, this verification function is called to verify whether the new password meets the required complexity based on the function execution results. 
+When creating a user or modifying a password, the verification function will be called, and the new password will be judged whether it meets complexity requirements based on the execution result of the function.
 
 ## Set password complexity and enable password complexity verification
 
 OceanBase Database in Oracle mode provides the `PASSWORD_VERIFY_FUNCTION` parameter to verify password complexity. 
 
-The `PASSWORD_VERIFY_FUNCTION` parameter allows you to add PL password complexity verification functions to the `CREATE PROFILE` and `ALTER PROFILE` statements as parameters. 
+The `PASSWORD_VERIFY_FUNCTION` parameter allows passing the PL password complexity verification function as a parameter to the `CREATE PROFILE` and `ALTER PROFILE` statements. 
 
   <main id="notice" type='notice'>
     <h4>Notice:</h4>
-    <p>In the production environment, we recommend that you set passwords to 20 characters in length, and the passwords must contain digits, uppercase letters, lowercase letters, and special characters. Low-complexity passwords such as those containing a username or repeated characters are more likely to be cracked. Therefore, you must ensure the high complexity of passwords for security purposes. 
+    <p>In a production environment, it is recommended to set a password length of 20 characters, including digits, uppercase letters, lowercase letters, and special characters. The lower the complexity of the password, the greater the likelihood that it will be cracked, such as including the username, using repeated characters, etc. For security reasons, it is necessary to ensure that user passwords have high complexity.
     </li></p>
   </main>
 
-1. Log on to an Oracle tenant of a cluster as the SYS user. 
+1. Log on to an Oracle tenant of a cluster using the SYS user. 
 
    ```shell
-   obclient -usys@oracle -h10.xxx.xxx.1 - P2881 -P*******
+   obclient -usys@oracle -h10.xxx.xxx.1 - P2881 -P***1***
    ```
 
-2. Write the function corresponding to the `PASSWORD_VERIFY_FUNCTION` parameter and grant privileges. 
+2. Write the function corresponding to the `PASSWORD_VERIFY_FUNCTION` parameter and grant permissions. 
 
-   The following are example password complexity rules: 
+   The rules for setting password complexity are as follows: 
 
-   * The password must be 8 to 256 characters in length. 
+   * The password must be 8 to 256 characters long. 
 
    * The password must contain at least one uppercase letter, one lowercase letter, and one special character. 
 
-   * The password must be different from the username, username in reverse order, or server name. 
+   * The password cannot be the username, the reverse of the username, or the server name. 
 
    * The password cannot be `welcome1`, `database1`, `account1`, `user1234`, `password1`, `oracle123`, `computer1`, `abcdefg1`, `change_on_install`, or `oracle`. 
 
-   * When you change your password, the new password must be different from the old password by at least three characters. 
+   * When you change the password, the new password must have at least 3 characters that are different from the old password. 
 
    Example:
 
@@ -256,7 +256,7 @@ The `PASSWORD_VERIFY_FUNCTION` parameter allows you to add PL password complexit
 
    For information about how to create a function, see [Create a function](../../../../7.reference/4.development-reference/3.pl-reference/3.pl-oracle/7.stored-procedure-and-functions-oracle/3.create-a-function-oracle.md). 
 
-3. In the user profile, specify the `PASSWORD_VERIFY_FUNCTION` parameter to enable password complexity verification. 
+3. In the user's profile, specify the `PASSWORD_VERIFY_FUNCTION` parameter to enable password complexity verification. 
 
    Sample statement:
 
@@ -264,9 +264,9 @@ The `PASSWORD_VERIFY_FUNCTION` parameter allows you to add PL password complexit
    obclient> ALTER PROFILE profile_name LIMIT PASSWORD_VERIFY_FUNCTION verify_function;
    ```
 
-   You can set `profile_name` to your custom profile or the `DEFAULT` profile. 
+   where `profile_name` can use your customized profile or use the `DEFAULT` profile. 
 
-   Example: Specify the `PASSWORD_VERIFY_FUNCTION` parameter by using the `DEFAULT` profile
+   The following is an example of using the `DEFAULT` profile to specify the `PASSWORD_VERIFY_FUNCTION` parameter: 
 
    ```shell
    obclient> ALTER PROFILE DEFAULT LIMIT PASSWORD_VERIFY_FUNCTION verify_function;
@@ -295,15 +295,15 @@ The `PASSWORD_VERIFY_FUNCTION` parameter allows you to add PL password complexit
    1 row in set
    ```
 
-## Check whether the password complexity settings are valid
+## Check whether the password complexity setting is effective
 
-1. Log on to an Oracle tenant of a cluster as the SYS user. 
+1. Log in to an Oracle tenant of a cluster using the SYS user. 
 
    ```shell
-   obclient -usys@oracle -h10.xxx.xxx.1 - P2881 -P*******
+   obclient -usys@oracle -h10.xxx.xxx.1 - P2881 -P***1***
    ```
 
-2. Attempt to create a user named `sectest1` separately with a valid password and an invalid password. 
+2. Create user `sectest1` using a password that meets the requirements, and another user `sectest1` using a password that does not meet the requirements. 
 
    ```shell
    obclient> CREATE USER sectest1 IDENTIFIED BY ***s**;
@@ -318,21 +318,21 @@ The `PASSWORD_VERIFY_FUNCTION` parameter allows you to add PL password complexit
 
 ## View password complexity rules
 
-After the password complexity settings are configured, you can view the complexity rules in functions. 
+After successfully setting the password complexity, if you need to view the specific complexity rules next time, you can obtain them by querying the content of the function. 
 
 Perform the following steps to view the complexity rules:
 
-1. Log on to an Oracle tenant of a cluster as the root user. 
+1. Log in to an Oracle tenant of a cluster using the root user. 
 
    ```shell
-   obclient -usys@oracle -h10.xxx.xxx.1 - P2881 -P*******
+   obclient -usys@oracle -h10.xxx.xxx.1 - P2881 -P***1***
    ```
 
 2. Query the `DBA_SOURCE` view to find the corresponding function. 
 
    The `DBA_SOURCE` view records all stored procedures and functions in the system. 
 
-   For more information about the fields in the `DBA_SOURCE` view, see [DBA_SOURCE](../../../../7.reference/5.system-reference/5.system-overview-of-oracle-mode/2.dictionary-view-of-oracle-mode/99.dba_source-of-oracle-mode.md). 
+   For more information about the `DBA_SOURCE` view, see [DBA_SOURCE](../../../../7.reference/5.system-reference/5.system-overview-of-oracle-mode/2.dictionary-view-of-oracle-mode/99.dba_source-of-oracle-mode.md). 
 
    Example:
 
@@ -352,7 +352,7 @@ Perform the following steps to view the complexity rules:
 
    The `USER_SOURCE` view records all stored procedures and functions owned by the current user in the system. 
 
-   For more information about the fields in the `USER_SOURCE` view, see [USER_SOURCE](../../../../7.reference/5.system-reference/5.system-overview-of-oracle-mode/2.dictionary-view-of-oracle-mode/168.user_source-of-oracle-mode.md). 
+   For more information about the `USER_SOURCE` view, see [USER_SOURCE](../../../../7.reference/5.system-reference/5.system-overview-of-oracle-mode/2.dictionary-view-of-oracle-mode/168.user_source-of-oracle-mode.md). 
 
    Example:
 
