--- a/en-US/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/1.permission-classification-of-mysql.md
+++ b/en-US/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/1.permission-classification-of-mysql.md
@@ -6,9 +6,11 @@ This topic describes the privilege types supported by OceanBase Database in MySQ
 
 OceanBase Database supports the following three levels of privileges in MySQL mode:
 
-* Administrator privileges: the privileges to manage a tenant, such as the privileges to modify system settings and access all tables. 
-* Database privileges: the privileges to manage all objects in a database, such as the privileges to create, access, and delete tables in the database. 
-* Object privileges: the privileges to manage a specific object, such as the privileges to access a specific table, view, or index. 
+   * Administrator privileges: the privileges to manage a tenant, such as modifying system settings and accessing all tables in the tenant.
+
+   * Database privileges: the privileges to manage all objects in a database, such as creating or deleting tables in the database, and accessing those tables.
+
+   * Object privileges: the privileges to manage a specific object, such as accessing a specific table, view, or index.
 
 The following table lists the privileges supported by OceanBase Database in MySQL mode. 
 
@@ -49,7 +51,7 @@ The following table lists the privileges supported by OceanBase Database in MySQ
 | User-level privileges | CREATE   RESOURCE POOL | The privilege to create, modify, and delete resource pools.  |
 | User-level privileges | CREATE   RESOURCE UNIT | The privilege to create, modify, and delete resource units.  |
 | User-level privileges | CREATE USER | The privilege to execute the `CREATE USER` statement to create MySQL accounts.  |
-| User-level privileges | PROCESS | The privilege to execute the `SHOW PROCESSLIST` statement to view processes of other users.  |
+| User-level privileges | PROCESS | The privilege to execute the `SHOW PROCESSLIST` statement to view the processes of other users.  |
 | User-level privileges | SHOW DB | The privilege to view all database names on a server, including the names of the databases that are accessible to the user.  |
 | User-level privileges | FILE | The privilege to execute the `SELECT INTO OUTFILE` and `LOAD DATA INFILE` statements.  |
 | User-level privileges | SUPER | Indicates whether the user can perform some advanced management operations, for example, delete a user process by using the `KILL` statement, modify global MySQL variables by using the `SET GLOBAL` statement, and execute various commands related to copying and logs.  |
