--- a/en-US/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/2.authority-of-mysql-mode.md
+++ b/en-US/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/2.authority-of-mysql-mode.md
@@ -1,10 +1,10 @@
 # Grant privileges
 
-You can use the `GRANT` statement to grant user-level, database-level, or object privileges to a user. 
+Use the `GRANT` statement to grant user-level, database-level, or object privileges to a user. 
 
 ## Prerequisites
 
-You must have the `GRANT OPTION` privilege and the privileges to be granted. For example, if the `test1` user wants to grant the `SELECT` privilege on the `t1` table to the `test2` user, the `test1` user must have the `GRANT OPTION` and `SELECT` privileges on the `t1` table. 
+You must have the `GRANT OPTION` privilege and the privileges to be granted. For example, if the `test1` user wants to grant the `SELECT` privilege on the `t1` table to the `test2` user, the `test1` user must have the `GRANT OPTION` privilege and the `SELECT` privilege on the `t1` table. 
 
 For information about how to view your privileges, see [View user privileges](../2.permission-of-mysql-mode/4.view-user-permissions-of-mysql-mode.md). 
 
@@ -12,7 +12,7 @@ For information about how to view your privileges, see [View user privileges](..
 
 Before you grant a privilege, note the following items:
 
-* When you grant a privilege to a user, the user is automatically created if the user does not exist. If `sql_mode='no_auto_create_user'` is specified and `IDENTIFIED BY` is not used to specify a password, the system cannot create a user. 
+* When you grant a privilege to a user, the user is automatically created if the user does not exist. However, if `sql_mode='no_auto_create_user'` is specified and `IDENTIFIED BY` is not used in the statement to specify a password, the user cannot be created directly. 
 
 * When you grant multiple privileges to a user at a time, separate the privileges with commas (,). 
 
@@ -24,7 +24,7 @@ Before you grant a privilege, note the following items:
 
 ### Syntax for granting privileges
 
-Syntax:
+The syntax for granting privileges is as follows:
 
 ```sql
 GRANT priv_type
@@ -63,17 +63,17 @@ user_specification:
 user_name [IDENTIFIED BY [PASSWORD] 'password']
 ```
 
-Notes:
+where
 
-* `priv_type`: the type of the privilege to be granted. When you grant multiple privileges to a user at a time, separate the privileges with commas (,). 
+* `priv_type`: the type of privilege to be granted. When you grant multiple privileges to a user at a time, separate the privileges with commas (,). 
 
-* `priv_level`: the level of the privilege to be granted. In MySQL mode, OceanBase Database provides privileges of the following levels:
+* `priv_level`: the level of privilege to be granted. In MySQL mode, OceanBase Database provides privileges of the following levels:
 
-   * User level: Privileges at this level apply to all databases. You can use `GRANT ... ON *.*` to grant user-level privileges. 
+   * User level: Privileges at this level apply to all databases. `GRANT ... ON *.*` is used to grant user-level privileges. 
 
-   * Database level: Privileges at this level apply to all objects in a specified database. You can use `GRANT ... ON db_name.*` to grant database-level privileges. 
+   * Database level: Privileges at this level apply to all objects in a specified database. `GRANT ... ON db_name.*` is used to grant database-level privileges. 
 
-   * Table level: Privileges at this level apply to all columns in a specified table. You can use `GRANT ... ON database_name.table_name` to grant table-level privileges. 
+   * Table level: Privileges at this level apply to all columns in a specified table. `GRANT ... ON database_name.table_name` is used to grant table-level privileges. 
 
 * `user_specification`: the user to which one or more privileges are granted. If the user does not exist, the user is automatically created. 
 
@@ -119,7 +119,7 @@ Notes:
 
 * Grant table-level privileges
 
-   Table-level privileges are management privileges on a specified table in a specified database. You can use `GRANT ... ON db_name.tb1_name` to grant table-level privileges. 
+   Object privileges are management privileges on a specified table in a specified database. You can use `GRANT ... ON db_name.tb1_name` to grant object privileges. 
 
    * To grant the `INSERT` and `SELECT` privileges on the `tb1_name` table in the `db1` database to the `test` user, execute the following statement: 
 
