--- a/en-US/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/3.delegation-of-authority-of-mysql-mode.md
+++ b/en-US/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/3.delegation-of-authority-of-mysql-mode.md
@@ -1,44 +1,44 @@
 # Privilege delegation
 
-Privilege delegation solves the problem due to the centralization of privileges to a limited number of authorizers. When you grant a privilege to a user by using a `WITH ADMIN OPTION` or `WITH GRANT OPTION` clause in the `GRANT` statement, you allow the user to grant the same privilege to other users. The revocation of object privileges extends to dependent users. For example, when you revoke an object privilege from User A who has delegated the object privilege to User B, the object privilege is also revoked from User B. The revocation of system privileges does not extend to dependent users. 
+Privilege delegation resolves the issue of centralized authorization. By specifying `WITH ADMIN OPTION` or `WITH GRANT OPTION` during authorization, users can be granted the permission to delegate corresponding privileges to other users. When revoking object privileges, the corresponding privileges that the user has delegated to other users will also be revoked. For example, if user A grants privilege to user B and user B grants privilege to user C, when user A revokes privilege from user B, privilege of user C will also be revoked. Revoking system privileges does not revoke delegated privileges.
 
 ## Examples
 
-* Failure of privilege delegation
+* Failed privilege delegation
 
-   1. Log on to a MySQL tenant of a cluster as the root user. 
+   1. Log in to a MySQL tenant of a cluster using the root user. 
 
-   2. Create a user A and grant privileges without using the `WITH GRANT OPTION` clause. 
+   2. Create user A, and grant privileges to this user without using the `WITH GRANT OPTION` clause. 
 
       ```shell
-      obclient> GRANT ALL PRIVILEGES ON *.* TO A IDENTIFIED BY '******';
+      obclient> GRANT ALL PRIVILEGES ON *.* TO A IDENTIFIED BY '**1***';
       Query OK, 0 rows affected (0.034 sec)
       ```
 
-   3. Log on to the cluster as user A, create user B, and grant user B the same privileges as user A. An error is returned. 
+   3. Log in to the cluster as user A, create user B, and grant user B the same privileges as user A. An error is returned. 
 
       ```shell
-      obclient> GRANT ALL PRIVILEGES ON *.* TO 'B' IDENTIFIED BY '******';
+      obclient> GRANT ALL PRIVILEGES ON *.* TO 'B' IDENTIFIED BY '**1***';
       ERROR 1227 (42501): Access denied; you need (at least one of) the GRANT privilege(s) for this operation
       ```
 
       <main id="notice" type='alert'>
-         <h4>Notice:</h4>
+         <h4>Warning:</h4>
          <p>If you grant a privilege to a user without using the <Code>WITH GRANT OPTION</Code> clause, the user cannot grant the same privilege to other users.</p>
       </main>
 
 * Successful privilege delegation
-   1. Log on to a MySQL tenant of a cluster as the root user. 
+   1. Log in to a MySQL tenant of a cluster as the root user. 
 
-   2. Grant privileges to user A using the `WITH GRANT OPTION` clause. Sample statement: 
+   2. Grant privileges to user A using the `WITH GRANT OPTION` clause.  
 
       ```shell
       obclient> GRANT ALL PRIVILEGES ON *.* TO A with grant option;
       ```
 
-   3. Log on to the cluster as user A, create user B, and grant user B the same privileges as user A. A success message is returned. 
+   3. Log in to the cluster as user A, create user B, and grant user B the same privileges as user A. A success message is returned. 
 
       ```shell
-      obclient> GRANT ALL PRIVILEGES ON *.* TO 'B' IDENTIFIED BY '******';
+      obclient> GRANT ALL PRIVILEGES ON *.* TO 'B' IDENTIFIED BY '**1***';
       Query OK, 0 rows affected (0.058 sec)
       ```
