--- a/en-US/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/1.permission-classification-of-oracle-mode.md
+++ b/en-US/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/1.permission-classification-of-oracle-mode.md
@@ -4,15 +4,16 @@ This topic describes the privilege types supported by OceanBase Database in Orac
 
 OceanBase Database supports the following two types of privileges in Oracle mode:
 
-* Object privileges: the privileges to operate on specific objects, such as the ALTER, SELECT, and UPDATE privileges on a table. 
-* System privileges: the privileges that allow users to perform specific database operations on one or all schemas. 
+   * Object privileges: the privileges to operate on specific objects, such as the ALTER, SELECT, and UPDATE privileges on a table.
+
+   * System privileges: the privileges that allow users to perform specific database operations on one or all schemas.
 
   <main id="notice" type='explain'>
     <h4>Note:</h4>
-    <p>The scope of a system privilege is larger than that of an object privilege. </p>
+    <p>System privileges provide much broader permissions than object privileges. </p>
   </main>
 
-**The following table lists the privileges supported by OceanBase Database in Oracle mode.**
+The following table lists the privileges supported by OceanBase Database in Oracle mode.
 
 | Type | Privilege | Description |
 |------|-----------------------------|-------------------|
@@ -104,7 +105,7 @@ OceanBase Database supports the following two types of privileges in Oracle mode
 | System privileges | DEBUG CONNECT SESSION | The privilege to debug connection sessions.  |
 | System privileges | DEBUG ANY PROCEDURE | The privilege to debug any procedures.  |
 
-## More information
+## References
 
 For more information about how to manage privileges in OceanBase Database, see the following topics:
 
