--- a/en-US/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/5.indirect-authority-of-oracle-mode.md
+++ b/en-US/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/5.indirect-authority-of-oracle-mode.md
@@ -1,40 +1,38 @@
 # Indirect privileges
 
-User privileges are divided into direct and indirect privileges. Direct privileges are the system or object privileges that are granted to a user. Indirect privileges are those that are granted to roles of a user. Most operations can be performed with direct or indirect privileges. 
+User privileges are divided into direct and indirect privileges. Direct privileges are the system or object privileges that are granted to a user. Indirect privileges are those that are granted to roles of a user. Most operations can be performed with direct or indirect privileges. However, there are certain operations where direct privileges are required. These operations include:
 
-However, direct privileges are required to perform the following operations:
-
-* Access objects in a view when the view is created. 
-* Execute statements in named PL/SQL blocks that require definer rights for execution. 
+* When creating a view, the user needs permission to access objects in a view.
+* Permissions required to execute statements in a named PL block with the definers' rights.
 
 ## Indirect privileges granted to roles
 
 ### Prerequisites
 
-You must have the privileges or roles to be added and any of the following privileges: `GRANT OPTION`, `GRANT ANY OBJECT PRIVILEGE`, `GRANT ANY PRIVILEGE`, and `GRANT ANY ROLE`. 
+When granting system or object privileges or roles to a role, the current user must have the privileges or roles to be granted and have any of the following privileges: `GRANT OPTION`, `GRANT ANY OBJECT PRIVILEGE`, `GRANT ANY PRIVILEGE`, and `GRANT ANY ROLE`.
 
-For information about how to view your privileges, see [View user privileges](6.view-user-permissions-of-oracle-mode.md). If you do not have the required privilege, contact an administrator. For more information, see [Modify user privileges](../../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/5.modify-user-permissions-for-oralce-tenant-of-oracle-mode.md). For more information about how to view your roles, see [View roles](../../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/9.manage-roles-of-oracle-mode/6.view-roles-of-oracle-mode.md). 
+For more information about how to view privileges, see [View user privileges](6.view-user-permissions-of-oracle-mode.md). If the user does not have the required privileges, contact an administrator. For more information about how to modify privileges, see [Modify user privileges](../../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/5.modify-user-permissions-for-oralce-tenant-of-oracle-mode.md). For more information about how to view the roles that a user has, see [View roles](../../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/9.manage-roles-of-oracle-mode/6.view-roles-of-oracle-mode.md). 
 
 ### Examples
 
-Grant the `role1` role the `SELECT` privilege on the `test1.tbl1` table: 
+Grant the `SELECT` privilege on the `test1.tbl1` table to the `role1` role:
 
 ```shell
 obclient> GRANT SELECT ON test1.tbl1 TO role1;
 Query OK, 0 rows affected
 ```
 
-You can also add privileges to the `PUBLIC` role by using the following SQL statement:
+In addition, you can add a privilege to the `PUBLIC` role using the following SQL statement:
 
 <main id="notice" type='notice'>
-    <h4>Notice:</h4>
-    <p>To ensure the security of OceanBase Database, we recommend that you assign this role to a user only when the role is necessary for your business. </p>
+    <h4>Warning:</h4>
+    <p>To ensure database security, only grant a privilege to this role when it is necessary. </p>
 </main>
 
 ```shell
 obclient> GRANT [privilege_list] TO PUBLIC;
 ```
 
-After you add a privilege to the PUBLIC role, all users in the tenant have the privilege. This means that all users can immediately perform operations that are authorized by the privilege. For more information about the `PUBLIC` role, see [Overview](../../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/9.manage-roles-of-oracle-mode/1.role-management-overview-of-oracle-mode.md). 
+If you grant a privilege to the PUBLIC role, all users in the tenant have that privilege. This means that all users can immediately perform operations authorized by the privilege. For more information about the `PUBLIC` role, see [Overview](../../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/9.manage-roles-of-oracle-mode/1.role-management-overview-of-oracle-mode.md). 
 
 For more information about the `GRANT` statement, see [GRANT](../../../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/17.grant-of-oracle-mode.md). 
