--- a/en-US/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/7.modify-user-permissions-of-oracle-mode.md
+++ b/en-US/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/7.modify-user-permissions-of-oracle-mode.md
@@ -1,28 +1,28 @@
 # Modify user privileges
 
-You can grant and revoke user privileges.
+Modifying user privileges includes granting and revoking user privileges.
 
 ## Grant privileges
 
 ### Prerequisites
 
-* When you grant an object privilege, you must be the owner of the object or have the privilege to be granted. For example, for the `test1` user to grant the `SELECT` privilege on table `t1` to the `test2` user, the `test1` user must have the `SELECT` privilege on table `t1`. In addition, you must have the `GRANT OPTION` or `GRANT ANY OBJECT PRIVILEGE` privilege.
+* When granting an object privilege, the current user must be the owner of the object or have the privilege to be granted. For example, if `test1` grants the `SELECT` privilege on table `t1` to `test2`, then `test1` must have the `SELECT` privilege on table `t1`. In addition, the user must have the `GRANT OPTION` or `GRANT ANY OBJECT PRIVILEGE` privilege.
 
-* When you grant a system privilege or a role, you must have the privilege or role to be granted and have the `GRANT OPTION`, `GRANT ANY PRIVILEGE`, or `GRANT ANY ROLE` privilege.
+* When granting a system privilege or a role, the current user must have the privilege or role to be granted and have the `GRANT OPTION`, `GRANT ANY PRIVILEGE`, or `GRANT ANY ROLE` privilege.
 
-For information about how to view your privileges, see [View user privileges](6.view-user-permissions-of-oracle-mode.md). If you do not have the required privileges, contact the administrator to obtain the privileges. For more information about how to view your roles, see [View roles](../../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/9.manage-roles-of-oracle-mode/6.view-roles-of-oracle-mode.md).
+For more information about how to view privileges, see [View user privileges](6.view-user-permissions-of-oracle-mode.md). If the user does not have the required privileges, contact the administrator to obtain the privileges. For more information about how to view roles, see [View roles](../../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/9.manage-roles-of-oracle-mode/6.view-roles-of-oracle-mode.md).
 
 ### Usage notes
 
-When you grant privileges, note the following information:
+When granting privileges, pay attention to the following:
 
-* When you grant multiple privileges to a user at a time, separate the privileges with commas (,).
+* When granting multiple privileges to a user at a time, separate the privileges with commas (,).
 
-* After a user is granted a privilege, the privilege takes effect only after the user is reconnected to OceanBase Database.
+* If a user has been granted a privilege, the privilege takes effect only after the user is reconnected to OceanBase Database.
 
 ### Syntax for granting privileges
 
-Syntax for granting object privileges:
+The syntax for granting object privileges is as follows:
 
 ```sql
 GRANT obj_with_col_priv_list
@@ -54,7 +54,7 @@ grant_user_list:
     grant_user [, grant_user ...]
 ```
 
-Syntax for granting system privileges:
+The syntax for granting system privileges is as follows:
 
 ```sql
 GRANT {system_privilege_list | ALL PRIVILEGES}
@@ -143,15 +143,15 @@ system_privilege:
   | ALTER DATABASE
 ```
 
-Notes:
+where
 
-* `obj_privilege`: specifies the object privileges to be granted. When you grant multiple privileges to a user, the privileges must be separated with commas (,).
+* `obj_privilege`: the object privileges to be granted. When granting multiple privileges to a user at a time, separate the privileges with commas (,).
 
-* `obj_clause`: specifies the objects related to the object privileges to be granted.
+* `obj_clause`: the objects involved in granting object privileges.
 
-* `system_privilege`: specifies the system privileges to be granted. When you grant multiple privileges to a user, the privileges must be separated with commas (,).
+* `system_privilege`: the system privileges to be granted. When granting multiple privileges to a user at a time, separate the privileges with commas (,).
 
-* `WITH GRANT OPTION`: specifies whether to enable privilege delegation. When privilege delegation is enabled, grant revocation extends to dependent users.
+* `WITH GRANT OPTION`: indicates whether the currently granted privilege can be further granted to others and whether it will be revoked cascadingly when the grant is revoked.
 
 ### Examples
 
@@ -177,25 +177,25 @@ For more information about the `GRANT` statement, see [GRANT](../../../../../7.r
 
 ### Prerequisites
 
-* When you revoke an object privilege, you must have the privilege to be revoked. For example, for the `test1` user to revoke the `SELECT` privilege on table `t1` from the `test2` user, the `test1` user must have the `SELECT` privilege on table `t1`. In addition, you must have the `GRANT OPTION` or `GRANT ANY OBJECT PRIVILEGE` privilege.
+* When revoking an object privilege, the current user must have the `GRANT OPTION` or `GRANT ANY OBJECT PRIVILEGE` privilege and the privilege to be revoked. For example, if the `test1` user revokes the `SELECT` privilege on table `t1` from the `test2` user, the `test1` user must have the `GRANT OPTION` or `GRANT ANY OBJECT PRIVILEGE` privilege and the `SELECT` privilege on table `t1`. 
 
-* When you revoke a system privilege or a role, you must have the privilege or role to be revoked and have the `GRANT OPTION`, `GRANT ANY PRIVILEGE`, or `GRANT ANY ROLE` privilege.
+* When revoking a system privilege or a role, the current user must have the privilege or role to be revoked and have the `GRANT OPTION`, `GRANT ANY PRIVILEGE`, or `GRANT ANY ROLE` privilege.
 
-* To revoke the `ALL PRIVILEGES` and `GRANT OPTION` privileges, you must have the global `GRANT OPTION` privilege or the `UPDATE` and `DELETE` privileges on the table.
+* When revoking the `ALL PRIVILEGES` and `GRANT OPTION` privileges, the current user must have the global `GRANT OPTION` privilege or the `UPDATE` and `DELETE` privileges on the table.
 
-For information about how to view your privileges, see [View user privileges](6.view-user-permissions-of-oracle-mode.md). If you do not have the required privileges, contact the administrator to obtain the privileges.
+For more information about how to view privileges, see [View user privileges](6.view-user-permissions-of-oracle-mode.md). If the user does not have the required privileges, contact the administrator to obtain the privileges.
 
 ### Usage notes
 
-* When you revoke multiple privileges of a user, the privileges must be separated with commas (,).
+* When revoking multiple privileges from a user at the same time, separate the privileges with commas (,).
 
-* When you revoke privileges of multiple users, the usernames must be separated with commas (,).
+* When revoking a privilege from multiple users at the same time, separate the usernames with commas (,).
 
-* If `GRANT OPTION` is not specified when you grant privileges to a user, grant revocation does not extend to dependent users. For example, if the `test1` user has granted some privileges to the `test2` user, when the privileges of the `test1` user are revoked, the privileges granted to the `test2` user will not be revoked.
+* When granting a privilege to a user without specifying `GRANT OPTION`, the revocation operation will not cascade. For example, if the `test1` user granted some privileges to the `test2` user, revoking the privileges from `test1` will not revoke the corresponding privileges from `test2`.
 
 ### Syntax for revoking privileges
 
-Syntax for revoking object privileges:
+The syntax for revoking object privileges is as follows:
 
 ```sql
 REVOKE obj_privileges
@@ -226,7 +226,7 @@ relation_name:
   STR_VALUE
 ```
 
-Syntax for revoking system privileges:
+The syntax for revoking system privileges is as follows:
 
 ```sql
 REVOKE {system_privilege_list | ALL PRIVILEGES}
@@ -316,19 +316,19 @@ system_privilege:
   | ALTER DATABASE
 ```
 
-Notes:
+where
 
-* `obj_privilege`: specifies the object privileges to be revoked. When you revoke multiple privileges, the privileges must be separated with commas (,).
+* `obj_privilege`: the object privileges to be revoked. When revoking multiple privileges, separate the privileges with commas (,).
 
-* `obj_clause`: specifies the objects related to the object privileges to be revoked.
+* `obj_clause`: the objects involved in revoking object privileges.
 
-* `system_privilege`: specifies the system privileges to be revoked. When you revoke multiple privileges, the privileges must be separated with commas (,).
+* `system_privilege`: the system privileges to be revoked. When revoking multiple privileges, separate the privileges with commas (,).
 
 ### Examples
 
 * Revoke system privileges
 
-   Revoke the `CREATE SEQUENCE` privilege of the `test` user.
+   Revoke the `CREATE SEQUENCE` privilege from the `test` user.
 
    ```shell
    obclient> REVOKE CREATE SEQUENCE FROM test;
