--- a/en-US/6.manage/5.security-and-permissions/3.access-control/4.row-level-access-control.md
+++ b/en-US/6.manage/5.security-and-permissions/3.access-control/4.row-level-access-control.md
@@ -1,28 +1,28 @@
 # Row-level access control
 
-OceanBase Database is compatible with the label security feature of Oracle databases. You can configure row-level access control to ensure the security of data reads and writes. This feature allows you to create fine-grained access control strategies for row data. After you create a strategy, you can apply it to the tables to be protected and assign the labels to users. 
+OceanBase Database is compatible with Oracle's label security feature, which enables access control at the row level, ensuring the security of reading and writing data. Security policies for finer-grained access control of row-level data can be built based on label security. After creating a policy, you can apply it to the tables that need protection, and grant labels to users.
 
-Label security is a forcible access control strategy. It records the label value of each row by adding a label column to the table, and compares the user label and data label to constrain the access. 
+Label security is a type of mandatory access control that involves adding a Label column to a table to record the Label value of each row. When accessing the data, the user's Label is compared to the data's Label to constrain the subject's (user's) access to the object (data in the table).
 
-OceanBase Database provides a built-in security administrator LBACSYS to manage and use the label security feature. The security administrator can create customized security strategies by defining labels in the strategies and setting user labels. A security strategy can be applied to multiple tables, and multiple security strategies can be applied to one table. When a security strategy is applied to a table, a column is automatically added to the table to control the table access. 
+OceanBase Database provides a built-in security administrator LBACSYS to manage and use the label security feature. The security administrator can customize their own security policies by creating security policies, defining labels in the policies, and setting user labels. A security policy can be applied to multiple tables, and multiple security policies can be applied to one table. When a security policy is applied to a table, a column is automatically added to the table to control the table access.
 
-## Limits
+## Limitations
 
-The label security feature is supported only in Oracle mode. 
+Currently, only the Oracle mode of OceanBase Database supports label security.
 
 ## Set row-level access control
 
-1. Log on to an Oracle tenant as the `sys` user and unlock the `LBACSYS` user. 
+1. Log in to an Oracle tenant as the `sys` user and unlock the `LBACSYS` user. 
 
-   The `LBACSYS` user is created in OceanBase Database by default. By default, this user is locked. You must unlock this user before you enable the label security feature. 
+   OceanBase Database will create an `LBACSYS` user by default, who is in a locked state. To use the label security feature, you need to unlock this user first.
 
    ```shell
    obclient> ALTER USER LBACSYS ACCOUNT UNLOCK;
    ```
 
-2. Change the logon password of the `LBACSYS` user. 
+2. Change the login password for the `LBACSYS` user. 
 
-   For security purposes, the password of the `LBACSYS` user is specified by the `sys` user. You can change the password based on your business needs. 
+   For security purposes, the password for the `LBACSYS` user is specified by the `sys` user. If you need to change this password later, simply specify a new one. 
 
    ```shell
    obclient> ALTER USER LBACSYS IDENTIFIED BY ***R***;
@@ -30,7 +30,7 @@ The label security feature is supported only in Oracle mode.
 
 3. Grant privileges to the `LBACSYS` user. 
 
-   By default, the `LBACSYS` user is not granted any privileges. You must execute the `GRANT` statement to grant the `CREATE SESSION` privilege to the `LBACSYS` user before you can set row-level access control. 
+   The `LBACSYS` user has no privileges by default. To set row-level access control, you must grant the `CREATE SESSION` privilege to the `LBACSYS` user using the `GRANT` statement. 
 
    ```shell
    obclient> GRANT CREATE SESSION TO LBACSYS;
@@ -38,11 +38,11 @@ The label security feature is supported only in Oracle mode.
 
 4. Log in to the Oracle tenant as the `LBACSYS` user. 
 
-5. Create a security strategy. 
+5. Create a security policy. 
 
-   The following statement creates a security strategy named `MY_POLICY`. 
+   A security policy named `MY_POLICY` has been created in this example. 
 
-   For more information about how to create a label security strategy, see [SA_SYSDBA.CREATE_POLICY](../../../7.reference/4.development-reference/3.pl-reference/3.pl-oracle/13.pl-label-security-package-oracle/2.sa-sysdba-policy-management-package-oracle/3.sa-sysdba-create-policy-oracle.md). 
+   For more information about how to create a label security policy, see [SA_SYSDBA.CREATE_POLICY](../../../7.reference/4.development-reference/3.pl-reference/3.pl-oracle/13.pl-label-security-package-oracle/2.sa-sysdba-policy-management-package-oracle/3.sa-sysdba-create-policy-oracle.md). 
 
    Example:
 
@@ -72,7 +72,7 @@ The label security feature is supported only in Oracle mode.
 
    ```
 
-7. Create a label and view the result. 
+7. Create a label. 
 
    For more information about how to create a label, see [SA_LABEL_ADMIN.CREATE_LABEL](../../../7.reference/4.development-reference/3.pl-reference/3.pl-oracle/13.pl-label-security-package-oracle/4.sa-label-admin-tag-management-pack-oracle/3.sa-label-admin-create-label-oracle.md). 
 
@@ -101,17 +101,17 @@ The label security feature is supported only in Oracle mode.
 
 8. Specify a user label. 
 
-   1. Log on to the `Oracle` tenant as the `SYS` user, create a user named `user1`, and then grant all privileges of the SYS user, except the `GRANT OPTION` privilege, to `user1`. 
+   1. Log in to the `Oracle` tenant as the `sys` user, create a user named `user1`, and then grant `user1` the `sys` user's all privileges except `GRANT OPTION`. 
 
       ```shell
-      obclient> CREATE USER user1 IDENTIFIED BY *******;
+      obclient> CREATE USER user1 IDENTIFIED BY ***1***;
       Query OK, 0 rows affected
 
       obclient> GRANT ALL PRIVILEGES TO user1;
       Query OK, 0 rows affected
       ```
 
-   2. Log on to the database as the security administrator `LBACSYS` and specify a label for `user1`. 
+   2. Log in to as the security administrator `LBACSYS` and specify a label for `user1`. 
 
       For more information about how to specify a label for a user, see [SA_USER_ADMIN.SET_LEVELS](../../../7.reference/4.development-reference/3.pl-reference/3.pl-oracle/13.pl-label-security-package/6.sa_user_admin-user-tag-management-pack/2.sa_user_admin-set_levels.md). 
 
@@ -128,18 +128,18 @@ The label security feature is supported only in Oracle mode.
       1 row in set (0.002 sec)
       ```
 
-9. Apply the strategy to a table. 
+9. Apply the security policy to a table. 
 
-   1. Log on to an Oracle tenant as `user1` and create a table named `tbl1`. 
+   1. Log in to the Oracle tenant as `user1` and create a table named `tbl1`. 
 
       ```shell
       obclient> CREATE TABLE tbl1(col1 INT,col2 INT);
       Query OK, 0 rows affected
       ```
 
-   2. Log on to the database as the security administrator `LBACSYS` and apply the strategy named `MY_POLICY` to `tbl1`. 
+   2. Log in as the security administrator `LBACSYS` and apply the security policy named `MY_POLICY` to `tbl1`. 
 
-      For more information about how to apply a specified strategy to a table, see [SA_POLICY_ADMIN.APPLY_TABLE_POLICY](../../../7.reference/4.development-reference/3.pl-reference/3.pl-oracle/13.pl-label-security-package-oracle/5.sa-policy-admin-policy-management-packs-oracle/2.sa-policy-admin-apply-table-policy-oracle.md). 
+      For more information about how to apply a specified policy to a table, see [SA_POLICY_ADMIN.APPLY_TABLE_POLICY](../../../7.reference/4.development-reference/3.pl-reference/3.pl-oracle/13.pl-label-security-package-oracle/5.sa-policy-admin-policy-management-packs-oracle/2.sa-policy-admin-apply-table-policy-oracle.md). 
 
       ```shell
       obclient> CALL SA_POLICY_ADMIN.APPLY_TABLE_POLICY('MY_POLICY','user1', 'tbl1', '', '', '');
@@ -148,7 +148,7 @@ The label security feature is supported only in Oracle mode.
 
 10. Insert data and verify the result. 
 
-1. Log on to the database as `user1`. Then, insert the `col1` and `MY_LABEL` columns into `tbl1`. 
+1. Log in as `user1`. Then, insert the `col1` and `MY_LABEL` columns into `tbl1`. 
 
    ```shell
    obclient> INSERT INTO tbl1 VALUES(1,1,10000);
@@ -164,7 +164,7 @@ The label security feature is supported only in Oracle mode.
    Query OK, 0 rows affected
    ```
 
-2. Log on to the database as `user1` and set the session label and row label.
+2. Set `SESSION LABEL` and `ROW LABEL` under `user1`.
 
    For more information about how to set a label for the current database session, see [SA_SESSION.SET_LABEL](../../../7.reference/4.development-reference/3.pl-reference/3.pl-oracle/13.pl-label-security-package-oracle/7.sa-session-session-management-pack-oracle/5.sa-session-set-label-oracle.md). 
 
@@ -194,7 +194,7 @@ The label security feature is supported only in Oracle mode.
    1 row in set
    ```
 
-3. Query data from tbl1. You can see that `user1` has access to data at the `INTERNAL` level and the level lower than it. 
+3. Query data from `tbl1`. You can see that `user1` can access data at the `INTERNAL` level and lower. 
 
    ```shell
    obclient> SELECT * FROM tbl1;
@@ -208,7 +208,7 @@ The label security feature is supported only in Oracle mode.
    3 rows in set
    ```
 
-4. Modify the label and query the table again. You can see that `user1` can access only data at the `PUBLIC` level. 
+4. Modify the label and query the table again. You can see that `user1` can only access data at the `PUBLIC` level. 
 
    ```shell
    obclient> CALL SA_SESSION.SET_LABEL('MY_POLICY', 'PUBLIC');
