--- a/en-US/6.manage/5.security-and-permissions/4.data-transfer-encryption/3.odp-transmission-encryption.md
+++ b/en-US/6.manage/5.security-and-permissions/4.data-transfer-encryption/3.odp-transmission-encryption.md
@@ -1,12 +1,12 @@
-# Transmission encryption of ODPs
+# ODP transmission encryption
 
-This topic describes the method of setting transmission encryption in OceanBase Database Proxies (ODPs).
+This topic describes the method for setting up OceanBase Database Proxy (ODP) transmission encryption.
 
 ## Version information
 
-ODP V1.8.1 and later versions support the Secure Sockets Layer (SSL) feature. You can view the ODP version by using the `-V` option.
+Starting from V1.8.1, ODP supports the Secure Sockets Layer (SSL) feature. You can use the `-V` parameter to view the version information of ODP.
 
-Run the following command in the installation path of an ODP to view the ODP version:
+To view the version information of ODP, run the following command in the installation path of ODP. Here is an example:
 
 ```shell
 ./bin/obproxy -V
@@ -16,21 +16,25 @@ BUILD_TIME: Nov  2 2020 21:53:06
 BUILD_FLAGS: -g -O2 -D_OB_VERSION=1000 -D_NO_EXCEPTION -D__STDC_LIMIT_MACROS -D__STDC_CONSTANT_MACROS -DNDEBUG -D__USE_LARGEFILE64 -D_FILE_OFFSET_BITS=64 -D_LARGE_FILE -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -Wall -Werror -Wextra -Wunused-parameter -Wformat -Wconversion -Wno-deprecated -Wno-invalid-offsetof -finline-functions -fno-strict-aliasing -mtune=core2 -Wno-psabi -Wno-sign-compare -DGCC_52 -DUSE_POSIX_FALLOCATE -DSUPPORT_SSE4_2 -DHAVE_SCHED_GETCPU -DHAVE_REALTIME_COARSE -DOB_HAVE_EVENTFD -DHAVE_FALLOCATE -DHAVE_MINIDUMP
 ```
 
-## Set keys and certificates
+## Set up keys and certificates
 
-You can set keys and certificates by using files.
+Currently, only file setup is supported.
 
-The setting takes effect only on new connections. The setting takes effect immediately without a restart.
+The configuration only applies to newly established connections and does not affect existing ones. The configuration takes effect immediately without the need for a restart.
 
-Log on to an ODP with the `root@proxysys` account and set the certificates, a public key, and a private key by using files. Example:
+After logging in to the ODP with the `root@proxysys` account, you can set up certificates, public keys, and private keys through files. Here is an example:
 
 ```shell
 obclient> UPDATE proxyconfig.security_config SET CONFIG_VAL= '{"sourceType" : "FILE", "CA" : "certs/ca.pem", "publicKey" : "certs/server-cert.pem", "privateKey" : "certs/server-key.pem"}' WHERE APP_NAME = 'obproxy' and VERSION = '1';
 ```
 
-The `sourceType` field must be set to `FILE`. `CA` specifies the storage directory of the CA certificate, `publicKey` specifies the storage directory of the public key certificate, and `privateKey` specifies the storage directory of the public key certificate.
+where
+* `sourceType` must be set to `FILE`.
+* `CA` specifies the storage path of the CA certificate.
+* `publicKey` specifies the storage path of the public key certificate.
+* `privateKey` specifies the storage path of the private key certificate.
 
-Execute the `SELECT` statement to check whether the certificates, public key, and private key of the ODP are set. Example:
+Execute the `SELECT` statement to check whether the ODP certificates, public key, and private key are set. Here is an example:
 
 ```shell
 obclient> SELECT CONFIG_VAL FROM proxyconfig.security_config WHERE APP_NAME = 'obproxy';
@@ -42,21 +46,19 @@ obclient> SELECT CONFIG_VAL FROM proxyconfig.security_config WHERE APP_NAME = 'o
 1 row in set (0.00 sec)
 ```
 
-## Configure SSL connections to clients
+## Configure the SSL connection between ODP and the client
 
-The `enable_client_ssl` parameter specifies whether to establish SSL connections between the ODP and clients. The default value is `false`, indicating that no SSL connection is established to the clients.
+The `enable_client_ssl` parameter specifies whether to enable the SSL connection between ODP and the client. The default value is `false`, indicating that the SSL connection is not enabled. If the `enable_client_ssl` parameter is set to `true`, it means that the SSL connection between ODP and the client is enabled.
 
-If you change the value of the `enable_client_ssl` parameter to `true`, the ODP can establish SSL connections to the clients.
+The configuration only applies to newly established connections and does not affect existing ones. The configuration takes effect immediately without the need for a restart.
 
-The setting takes effect only on new connections. The setting takes effect immediately without a restart.
+To establish the SSL connection between ODP and the client, you must ensure that the client supports the SSL feature. For example, you must check that the official MySQL client program (mysql) supports the SSL feature.
 
-To implement SSL connections between the ODP and clients, you must ensure that the clients support the SSL feature. For example, you must check whether the official client programs of MySQL support the SSL feature.
+After logging in to ODP from a client, you can run the `'\s'` command to check the value of the `SSL` parameter. This parameter indicates whether the SSL connection is established between ODP and the client.
 
-After you log on to the ODP from a client, you can run the `'\s'` command to check the value of the SSL field. This field indicates whether an SSL connection is established between the ODP and the client.
+* If the value of the `SSL` parameter is not `Not in use`, the SSL connection is established between ODP and the client.
 
-* If the returned value of the SSL field is not `Not in use`, an SSL connection is established between the ODP and the client
-
-* If the returned value of the SSL field is `Not in use`, no SSL connection is established between the ODP and the client.
+* If the value of the `SSL` parameter is `Not in use`, the SSL connection is not established between ODP and the client.
 
 Example:
 
@@ -83,10 +85,8 @@ TCP port:   13213
 Active      --------------
 ```
 
-## Configure SSL connections to OBServer nodes
+## Configure the SSL connection between ODP and the OBServer node
 
-The `enable_server_ssl` parameter specifies whether to establish SSL connections between the ODP and OBServer nodes. The default value is `false`, indicating that no SSL connection is established to the OBServer nodes.
+The `enable_server_ssl` parameter specifies whether to enable the SSL connection between ODP and the OBServer node. The default value is `false`, indicating that the SSL connection is not enabled. If the `enable_server_ssl` parameter is set to `true`, it means that the SSL connection between ODP and the OBServer node is enabled.
 
-If you change the value of `enable_server_ssl` to `true`, the ODP can establish SSL connections to the OBServer nodes.
-
-The setting takes effect only on new connections. The setting takes effect immediately without a restart.
+The configuration only applies to newly established connections and does not affect existing ones. The configuration takes effect immediately without the need for a restart.
