--- a/en-US/6.manage/6.backup-and-recovery/3.log-archive/3.open-the-log-archive-mode.md
+++ b/en-US/6.manage/6.backup-and-recovery/3.log-archive/3.open-the-log-archive-mode.md
@@ -4,7 +4,7 @@ After you complete the preparations, you can enable log archiving based on the b
 
 ## Prerequisites
 
-Before you enable log archiving, make sure that the log archiving state machine of the tenant for which log archiving is to be enabled is in the `STOP` state. For more information about the log archiving state machine, see [Overview](1.overview-of-log-archive.md).
+Before you enable log archiving, make sure that the log archiving state machine of the tenant for which log archiving is to be enabled is in the `STOP` state.
 
 ## Background
 
@@ -45,7 +45,7 @@ You can initiate log archiving for all tenants or a specified tenant in the clus
 
       After the statement is executed, the system initiates log archiving for the `mysql_tenant` tenant.
 
-After you enable log archiving, the system organizes and manages archived log data based on pieces. For more information about pieces, see [Overview](1.overview-of-log-archive.md).
+After you enable log archiving, the system organizes and manages archived log data based on pieces.
 
 ## Initiate log archiving for a user tenant
 
@@ -63,7 +63,7 @@ You can initiate log archiving for a user tenant without affecting other tenants
 
 ## More information
 
-* [Disable log archiving](4.stop-log-archive.md)
+* [Disable log archiving](4.close-the-log-archive-mode.md)
 
 * [View the archiving progress](6.view-log-archive-progress.md)
 
