--- a/en-US/6.manage/6.backup-and-recovery/4.data-backup/2.initiate-full-data-backup.md
+++ b/en-US/6.manage/6.backup-and-recovery/4.data-backup/2.initiate-full-data-backup.md
@@ -8,7 +8,7 @@ This topic describes how to initiate a data backup job after you initiate a log 
 
 * A log archive job has been initiated. You can initiate a data backup job only when `STATUS` of the log archive job is `DOING`.
 
-   For more information about how to enable log archiving, see [Enable log archiving](../3.log-archive/3.initiate-log-archive.md).
+   For more information about how to enable log archiving, see [Enable log archiving](../3.log-archive/3.open-the-log-archive-mode.md).
 
 ## (Optional) Preparations
 
