--- a/en-US/6.manage/6.backup-and-recovery/6.restore-data/2.initiate-the-tenant-restore.md
+++ b/en-US/6.manage/6.backup-and-recovery/6.restore-data/2.initiate-the-tenant-restore.md
@@ -115,7 +115,7 @@ The preparations before the restore are complete. For more information, see [Pre
 
       In the query results, tenant names starting with `META$` in the `TENANT_NAME` column indicate meta tenants. Meta tenants in the `TENANT_STATUS_NORMAL` state are successfully created.
 
-      For more information about the fields in the `oceanbase.DBA_OB_TENANTS` view, see [oceanbase.DBA_OB_TENANTS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md).
+      <!-- For more information about the fields in the `oceanbase.DBA_OB_TENANTS` view, see [oceanbase.DBA_OB_TENANTS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md). -->
 
    2. Specify the `ha_high_thread_score` parameter.
 
@@ -133,6 +133,6 @@ After you initiate a restore job, you can query the corresponding views to check
 
 Physical restore is associated with Physical Standby Database. A physically restored tenant serves as a standby tenant. You can change its role to PRIMARY based on your business needs. For more information about how to proceed to log replay from the source tenant, see [Replay logs to a standby tenant](7.recover-the-standby-tenant.md). For more information about how to change the role of a standby tenant to PRIMARY, see [Change the role of a standby tenant to PRIMARY](6.active-standby-tenant.md).
 
-## More information
+<!-- ## More information
 
-For more information about restore, see [Restore architecture](../../../7.reference/1.oceanbase-database-concepts/10.high-data-reliability-and-availability/5.backup-and-recovery/4.recovery-architecture.md).
+For more information about restore, see [Restore architecture](../../../7.reference/1.oceanbase-database-concepts/10.high-data-reliability-and-availability/5.backup-and-recovery/4.recovery-architecture.md). -->
