--- a/en-US/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/16.terminate-a-tenant-session.md
+++ b/en-US/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/16.terminate-a-tenant-session.md
@@ -18,10 +18,10 @@ Notes:
     <h4>Note</h4>
     <ul>
     <li>
-    <p>For more information about how to view privileges in Oracle mode, see <a href="./5.manage-users-and-permissions/2.oracle-mode/4.view-user-permissions-of-oracle-mode.md">View user privileges </a>. If you do not have the required privileges, contact the administrator to obtain the privileges. For more information, see <a href="./5.manage-users-and-permissions/2.oracle-mode/5.modify-user-permissions-of-oracle-mode.md">Modify user privileges</a>. </p>
+    <p>For more information about how to view privileges in Oracle mode, see <a href="9.manage-users-and-permissions/2.oracle-mode/4.view-the-user-permissions-of-oracle-mode.md">View user privileges </a>. If you do not have the required privileges, contact the administrator to obtain the privileges. For more information, see <a href="9.manage-users-and-permissions/2.oracle-mode/5.modify-user-permissions-for-oralce-tenant-of-oracle-mode.md">Modify user privileges</a>. </p>
     </li>
     <li>
-    <p>For more information about how to view your privileges in MySQL mode, see <a href="./5.manage-users-and-permissions/3.mysql-mode/4.view-user-permissions-of-mysql-mode.md">View user privileges</a>. If you do not have the required privileges, contact the administrator to obtain the privileges. For more information, see <a href="./5.manage-users-and-permissions/3.mysql-mode/5.modify-user-permissions-of-mysql-mode.md">Modify user privileges</a>. </p>
+    <p>For more information about how to view your privileges in MySQL mode, see <a href="9.manage-users-and-permissions/2.oracle-mode/4.view-the-user-permissions-of-oracle-mode.md">View user privileges</a>. If you do not have the required privileges, contact the administrator to obtain the privileges. For more information, see <a href="9.manage-users-and-permissions/2.oracle-mode/5.modify-user-permissions-for-oralce-tenant-of-oracle-mode.md">Modify user privileges</a>. </p>
     </li>
     </ul>
   </main>
