--- a/en-US/7.reference/3.performance-tuning-guide/2.performance-related-tools/3.log/3.trace-log.md
+++ b/en-US/7.reference/3.performance-tuning-guide/2.performance-related-tools/3.log/3.trace-log.md
@@ -156,7 +156,8 @@ Tags
 
 ## Examples
 
-You can use procedures in the PL/SQL package DBMS_MONITOR as needed to enable or disable a full-link diagnostic trace for an application based on different identifiers and record the trace information into the log files. The sampling frequency determines whether logs are sampled and recorded in the memory. Logs may also be recorded in the trace log file. For more information, see [Full-link diagnostics](../../../2.administrator-guide/7.management/3.daily-inspection/9.full-link-detection/1.full-link-diagnosis-overview.md).
+You can use procedures in the PL/SQL package DBMS_MONITOR as needed to enable or disable a full-link diagnostic trace for an application based on different identifiers and record the trace information into the log files. The sampling frequency determines whether logs are sampled and recorded in the memory. Logs may also be recorded in the trace log file. 
+<!-- For more information, see [Full-link diagnostics](../../../2.administrator-guide/7.management/3.daily-inspection/9.full-link-detection/1.full-link-diagnosis-overview.md). -->
 Example:
 
 ```sql
