--- a/en-US/6.manage/5.security-and-permissions/2.identification-and-authentication/1.identification-and-authentication-of-mysql-mode/3.login-failure-handling-of-mysql-mode.md
+++ b/en-US/6.manage/5.security-and-permissions/2.identification-and-authentication/1.identification-and-authentication-of-mysql-mode/3.login-failure-handling-of-mysql-mode.md
@@ -1,40 +1,40 @@
-# Handle logon failures
+# Login failure processing
 
-If a user fails to log on to OceanBase Database multiple times, OceanBase Database locks the account of the user to prevent malicious password attacks. This improves the security of OceanBase Database. 
+If OceanBase Database is in MySQL mode, for users who have multiple failed login attempts, the system will lock the user to prevent malicious password attacks, thereby improving database security.
 
-## Logon failure handling strategy
+## Logon failure processing policy
 
-In MySQL mode of OceanBase Database, you can set the `connection_control_failed_connections_threshold` parameter for a tenant to specify the threshold for control over failed logon attempts. If the number of consecutive failed logon attempts exceeds the value of this parameter, the system locks the account. 
+In MySQL mode, OceanBase Database controls the threshold of failed login attempts by using a tenant-level configuration item called `connection_control_failed_connections_threshold`. When a user exceeds the value defined by this configuration item for consecutive failed login attempts, the system locks the account.
 
-The default value of the `connection_control_failed_connections_threshold` parameter is `0`, and the value range is \[0, 2147483647\]. Notes:
+The default value of the `connection_control_failed_connections_threshold` configuration item is `0`, and the value range is \[0, 2147483647\]. Note the following:
 
-* A value of `0` indicates that the feature is disabled. In this case, no action is taken against failed logon attempts. 
+* When the configuration item is set to `0`, it means that this feature is turned off, and the system will not process the user's failed login attempts. 
 
-* If you set the parameter to a value other than `0`, the account of a user is locked when the number of failed logon attempts by the user exceeds the specified value. The lock duration is calculated by using the following formula:
+* When the configuration item is not set to `0`, if a user's failed login attempts exceed the specified value, the system will lock the account. The specific lock time is calculated using the following formula:
 
    `MIN(MAX((current_failed_login_num + 1 - connection_control_failed_connections_threshold) * 1000, connection_control_min_connection_delay), connection_control_max_connection_delay)`
 
-   Notes:
+   where
 
-   * `current_failed_login_num`: the number of consecutive failed logon attempts by a user. The value of the `current_failed_login_num` parameter is greater than or equal to that of the `connection_control_failed_connections_threshold` parameter. 
+   * `current_failed_login_num`: the number of consecutive failed login attempts by the user. The  `current_failed_login_num` is greater than or equal to `connection_control_failed_connections_threshold`. 
 
-   * `connection_control_min_connection_delay`: the minimum lock duration in milliseconds after the number of consecutive failed logon attempts exceeds the specified threshold. Value range: \[1000,2147483647\]. Default value: `1000`. 
+   * `connection_control_min_connection_delay`: the minimum lock time after exceeding the threshold of consecutive failed login attempts. The value range is \[1000, 2147483647\] and the default value is `1000`, measured in milliseconds. 
 
-      For more information about the `connection_control_min_connection_delay` parameter, see [connection_control_min_connection_delay](../../../../7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/6.connection_control_min_connection_delay.md). 
+      For more information about `connection_control_min_connection_delay`, see [connection_control_min_connection_delay](../../../../7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/6.connection_control_min_connection_delay.md). 
 
-   * `connection_control_max_connection_delay`: the maximum lock duration in milliseconds after the number of consecutive failed logon attempts exceeds the specified threshold. Value range: \[1000, 2147483647\]. Default value: `2147483647`. 
+   * `connection_control_max_connection_delay`: the maximum lock time after exceeding the threshold of consecutive failed login attempts. The value range is \[1000, 2147483647\] and the default value is `2147483647`, measured in milliseconds. 
 
-      For more information about the `connection_control_max_connection_delay` parameter, see [connection_control_max_connection_delay](../../../../7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/7.connection_control_max_connection_delay.md). 
+      For more information about `connection_control_max_connection_delay`, see [connection_control_max_connection_delay](../../../../7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/7.connection_control_max_connection_delay.md). 
 
 ## Configuration example
 
-1. Log on to a MySQL tenant of a cluster as the root user. 
+1. Log in to a MySQL tenant of a cluster using the root user. 
 
    ```shell
-   obclient -uroot@mysql -h127.1 -P2881 -p********
+   obclient -uroot@mysql -h127.1 -P2881 -p****1***
    ```
 
-2. Execute the following statements to set the threshold for failed logon attempts to 5 and set the minimum lock period and maximum lock period for an account when the number of failed logon attempts reaches the specified threshold to 60000 ms and 360000 ms respectively. 
+2. Execute the following statement to set the maximum number of failed login attempts for a user to 5. The minimum lock time for failed login attempts after exceeding the threshold is set to 60,000 milliseconds and the maximum lock time is 360,000 milliseconds. 
 
    Example:
 
@@ -48,15 +48,15 @@ The default value of the `connection_control_failed_connections_threshold` param
 
    For more information about the parameters, see [Modify cluster parameters](../../../../7.reference/2.administrator-guide/2.basic-database-management/2.configuration-management/2.set-parameters.md). 
 
-3. Create a user for logon. 
+3. Create a user. 
 
    ```shell
-   obclient> CREATE USER 'test' IDENTIFIED BY '*******';
+   obclient> CREATE USER 'test' IDENTIFIED BY '***1***';
    Query OK, 0 rows affected (0.04 sec)
    ```
 
-4. Verify the logon failure handling strategy.
-   If you enter an incorrect password five consecutive times, your account will be locked. 
+4. Check whether the login failure processing policy is effective.
+   If 5 consecutive incorrect passwords are entered, the user will be locked. 
 
    ```shell
    obclient -h127.1 -P2881 -utest@mysql -p**123**;
@@ -64,7 +64,7 @@ The default value of the `connection_control_failed_connections_threshold` param
    ERROR 5039 (01007): User locked
    ```
 
-   Log on to a `MySQL` tenant of OceanBase Database as the `root` user to view the logon failure information. 
+   Log in to a MySQL tenant of OceanBase Database using the root user, to view the login failure information. 
 
    ```shell
    obclient> SELECT * FROM information_schema.CONNECTION_CONTROL_FAILED_LOGIN_ATTEMPTS;
@@ -80,7 +80,7 @@ The default value of the `connection_control_failed_connections_threshold` param
 
    <main id="notice" type='notice'>
     <h4>Notice:</h4>
-    <p>If you log on as the administrator, you can directly lock and unlock users. If you log on as a regular user, you must have the global <code>ALTER USER</code> privilege to lock and unlock users. For more information about how to view and grant user privileges, see <a href="../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/4.view-user-permissions-of-mysql-mode.md">View user privileges</a> and <a href="../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/5.modify-user-permissions-of-mysql-mode.md">Modify user privileges</a>.</p>
+    <p>The operation of unlocking a user is generally performed by the administrator. If an ordinary user needs to perform lock and unlock operations, they must have global <code>ALTER USER</code> privileges. For information about how to view and grant user privileges, see <a href="../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/4.view-user-permissions-of-mysql-mode.md">View user privileges</a> and <a href="../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/5.modify-user-permissions-of-mysql-mode.md">Modify user privileges</a>.</p>
    </main>
 
    ```shell
