--- a/en-US/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/4.view-user-permissions-of-mysql-mode.md
+++ b/en-US/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/4.view-user-permissions-of-mysql-mode.md
@@ -1,12 +1,12 @@
 # View user privileges
 
-After you create a user, you can view the privileges of the user.
+After creating a user, you can view the privileges of the user.
 
 ## Procedure
 
-1. Log on to a MySQL tenant as an administrator.
+1. Log in to a MySQL tenant as an administrator.
 
-2. Use the following methods to view user privileges:
+2. Execute the following statements to view user privileges:
 
    * View the privileges granted to a user by using the `SHOW GRANTS` statement.
 
@@ -25,7 +25,7 @@ After you create a user, you can view the privileges of the user.
 
    * View the user-level privileges of a user.
 
-      You can query the `mysql.user` view to view the user-level privileges of a user as an administrator. A regular user can query the `mysql.user` view to view its own user-level privileges.
+      Administrators can view the user-level privileges of a user through the `mysql.user` view. Common users can view their own user-level privileges through the `mysql.user` view.
 
       Example:
 
@@ -78,11 +78,11 @@ After you create a user, you can view the privileges of the user.
       1 row in set
       ```
 
-      For more information about fields in the `mysql.user` view, see [mysql.user](../../../../../7.reference/5.system-reference/4.system-overview-of-mysql-mode/2.dictionary-view-of-mysql-mode/40.mysql-user-of-mysql-mode.md).
+      For more information about the `mysql.user` view, see [mysql.user](../../../../../7.reference/5.system-reference/4.system-overview-of-mysql-mode/2.dictionary-view-of-mysql-mode/40.mysql-user-of-mysql-mode.md).
 
    * View the database-level privileges of a user.
 
-      You can query the `mysql.db` view to view the database-level privileges of a user as an administrator. A regular user can query the `mysql.db` view to view its own database-level privileges.
+      Administrators can view the database-level privileges of a user through the `mysql.db` view. Common users can view their own database-level privileges through the `mysql.db` view.
 
       ```shell
       obclient> SELECT * FROM mysql.db WHERE user='test'\G;
@@ -112,11 +112,11 @@ After you create a user, you can view the privileges of the user.
       1 row in set
       ```
 
-      For more information about fields in the `mysql.db` view, see [mysql.db](../../../../../7.reference/5.system-reference/4.system-overview-of-mysql-mode/2.dictionary-view-of-mysql-mode/30.mysql-db-of-mysql-mode.md).
+      For more information about the `mysql.db` view, see [mysql.db](../../../../../7.reference/5.system-reference/4.system-overview-of-mysql-mode/2.dictionary-view-of-mysql-mode/30.mysql-db-of-mysql-mode.md).
 
-## More information
+## References
 
-For more information about user privileges and authorization, see the following topics:
+For more information about user privileges, see the following topics:
 
 * [Overview](../../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/1.users-and-permissions/1.users-and-their-permissions.md)
 
