--- a/en-US/6.manage/6.backup-and-recovery/3.log-archive/1.overview-of-log-archive.md
+++ b/en-US/6.manage/6.backup-and-recovery/3.log-archive/1.overview-of-log-archive.md
@@ -30,7 +30,7 @@ The following table describes the archiving status.
 | STOPPING | Log archiving is being stopped.  |
 | STOP | Log archiving is stopped.  |
 
-### Usage notes
+<!-- ### Usage notes
 
 
 
@@ -38,9 +38,9 @@ The following table describes the archiving status.
 
 * Before you execute the `ALTER SYSTEM` statement to disable log archiving, make sure that the state machine is in any of the `PREPARE`, `BEGINNING`, `DOING`, or `INTERRUPTED` state. After the statement is executed, the state machine remains in the `STOPPING` state until it advances to the `STOP` state, which indicates that log archiving is stopped.
 
-* If the state machine is in the `INTERRUPTED` state, log archiving is interrupted. At this time, log archiving is paused. You must disable log archiving and then enable it again. For more information about how to disable log archiving, see [Disable log archiving](4.stop-log-archive.md).
+* If the state machine is in the `INTERRUPTED` state, log archiving is interrupted. At this time, log archiving is paused. You must disable log archiving and then enable it again.
 
-If the state machine is not in the required state, the ALTER SYSTEM statement may fail. However, the failure has no impact on your system.
+If the state machine is not in the required state, the ALTER SYSTEM statement may fail. However, the failure has no impact on your system. -->
 
 ## Structure of archived logs
 
